--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-wi`dth, initial-scale=1.0">
-	<title>贪吃蛇</title>
+	<title>贪吃蛇ovo</title>
 </head>
 <body>
 	<!-- 游戏主容器 -->
